opam-version: "2.0"
name: "LS2NF"
synopsis: "Meta-theories on LS2NF and ambiguity encoding"

maintainer: ["paulzfm"]
authors: ["paulzfm" "panda2134"]

homepage: "https://github.com/lay-it-out/LS2NF-theory"
bug-reports: "https://github.com/lay-it-out/LS2NF-theory/issues"

depends: [
  "coq" { (>= "8.13.2" & < "8.14~") }
  "coq-stdpp" { >= "dev" }
  "dune" { >= "2.7.0" }
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
