opam-version: "2.0"
name: "LS2NF"
synopsis: "Meta-theories on LS2NF and ambiguity encoding"

maintainer: ["paulzfm"]
authors: ["paulzfm" "panda2134"]

homepage: "https://github.com/lay-it-out/LS2NF-theory"
bug-reports: "https://github.com/lay-it-out/LS2NF-theory/issues"

depends: [
  "coq" { = "8.14.1" }
  "coq-stdpp" { = "dev.2023-03-24.1.504d165a" }
  "dune" { >= "2.7.0" }
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
